# lolzteam-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
codegen/: Cargo.toml
codegen/src/: emitter.rs  main.rs  parser.rs
codegen/src/transforms/: enums.rs  mod.rs  operations.rs  parameters.rs  responses.rs  types.rs
codegen/src/utils/: deref.rs  mod.rs  naming.rs
lolzteam/: Cargo.toml
lolzteam/src/: lib.rs
lolzteam/src/runtime/: errors.rs  http_client.rs  mod.rs  rate_limiter.rs  retry.rs  types.rs
lolzteam/tests/: errors.rs  rate_limiter.rs  retry.rs  test_client.rs
