[package]
name = "lolzteam"
version = "0.1.0"
edition = "2021"
description = "API wrapper for Lolzteam Forum and Market"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "sync"] }
fastrand = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
